# file_renamer

./: Cargo.toml
src/: app.rs  lib.rs  main.rs
